; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/engine/sw/extr_base.c_nvkm_sw_cclass_get.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/engine/sw/extr_base.c_nvkm_sw_cclass_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_fifo_chan = type { i32 }
%struct.nvkm_oclass = type { i32 }
%struct.nvkm_object = type { i32 }
%struct.nvkm_sw = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.nvkm_sw*, %struct.nvkm_fifo_chan*, %struct.nvkm_oclass*, %struct.nvkm_object**)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nvkm_fifo_chan*, %struct.nvkm_oclass*, %struct.nvkm_object**)* @nvkm_sw_cclass_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nvkm_sw_cclass_get(%struct.nvkm_fifo_chan* %0, %struct.nvkm_oclass* %1, %struct.nvkm_object** %2) #0 {
  %4 = alloca %struct.nvkm_fifo_chan*, align 8
  %5 = alloca %struct.nvkm_oclass*, align 8
  %6 = alloca %struct.nvkm_object**, align 8
  %7 = alloca %struct.nvkm_sw*, align 8
  store %struct.nvkm_fifo_chan* %0, %struct.nvkm_fifo_chan** %4, align 8
  store %struct.nvkm_oclass* %1, %struct.nvkm_oclass** %5, align 8
  store %struct.nvkm_object** %2, %struct.nvkm_object*** %6, align 8
  %8 = load %struct.nvkm_oclass*, %struct.nvkm_oclass** %5, align 8
  %9 = getelementptr inbounds %struct.nvkm_oclass, %struct.nvkm_oclass* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call %struct.nvkm_sw* @nvkm_sw(i32 %10)
  store %struct.nvkm_sw* %11, %struct.nvkm_sw** %7, align 8
  %12 = load %struct.nvkm_sw*, %struct.nvkm_sw** %7, align 8
  %13 = getelementptr inbounds %struct.nvkm_sw, %struct.nvkm_sw* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32 (%struct.nvkm_sw*, %struct.nvkm_fifo_chan*, %struct.nvkm_oclass*, %struct.nvkm_object**)*, i32 (%struct.nvkm_sw*, %struct.nvkm_fifo_chan*, %struct.nvkm_oclass*, %struct.nvkm_object**)** %15, align 8
  %17 = load %struct.nvkm_sw*, %struct.nvkm_sw** %7, align 8
  %18 = load %struct.nvkm_fifo_chan*, %struct.nvkm_fifo_chan** %4, align 8
  %19 = load %struct.nvkm_oclass*, %struct.nvkm_oclass** %5, align 8
  %20 = load %struct.nvkm_object**, %struct.nvkm_object*** %6, align 8
  %21 = call i32 %16(%struct.nvkm_sw* %17, %struct.nvkm_fifo_chan* %18, %struct.nvkm_oclass* %19, %struct.nvkm_object** %20)
  ret i32 %21
}

declare dso_local %struct.nvkm_sw* @nvkm_sw(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
